[project]
name = "pasarguard-node-bridge"
version = "0.6.0"
description = "python package to connect your project with PasarGuard node go"
url = "https://github.com/PasarGuard/node_bridge_py"
keywords = [
    "PasarGuard-Node",
    "PasarGuard",
    "PasarGuard-panel",
    "PasarGuard python",
    "PasarGuard API",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiohttp-socks>=0.11.0",
    "grpclib>=0.4.9",
    "packaging>=26.2",
    "protobuf>=6.33.6",
    "python-socks[asyncio]>=2.8.1",
]

classifiers = ["Programming Language :: Python :: 3.12"]

[project.urls]
Homepage = "https://github.com/PasarGuard/node_bridge_py"
Repository = "https://github.com/PasarGuard/node_bridge_py.git"

[dependency-groups]
dev = ["grpcio-tools>=1.80.0"]

[tool.ruff]
line-length = 120
exclude = ["PasarGuardNodeBridge/common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PasarGuardNodeBridge"]
